--- a/UIModels/HoverFligntView.xaml
+++ b/UIModels/HoverFligntView.xaml
@@ -55,9 +55,9 @@
         </StackPanel>
         <StackPanel Grid.Row="3" Margin="1"
             Orientation="Horizontal">
-            <Label Content="直升机坐标:" />
+            <Label Content="战斗机坐标:" />
             <Label Content="{Binding NowLocation, Converter={StaticResource PointToStringConverter}}" />
-            <Label Content="战斗机坐标:" />
+            <Label Content="直升机坐标:" />
             <Label Content="{Binding SixPlatformNowLocation, Converter={StaticResource PointToStringConverter}}" />
         </StackPanel>
     </Grid>
