--- a/UIModels/OnlyInstrumencs.xaml
+++ b/UIModels/OnlyInstrumencs.xaml
@@ -73,9 +73,9 @@
             Grid.Row="4"
             Margin="1"
             Orientation="Horizontal">
-            <Label Content="直升机坐标:" />
+            <Label Content="战斗机坐标:" />
             <Label Content="{Binding NowLocation, Converter={StaticResource PointToStringConverter}}" />
-            <Label Content="战斗机坐标:" />
+            <Label Content="直升机坐标:" />
             <Label Content="{Binding SixPlatformNowLocation, Converter={StaticResource PointToStringConverter}}" />
         </StackPanel>
     </Grid>
