--- a/UIModels/SomersaultView.xaml
+++ b/UIModels/SomersaultView.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TeachingPlatformApp.UIModels"
       xmlns:myconvers="clr-namespace:TeachingPlatformApp.Converters"
+      xmlns:myctrls="clr-namespace:TeachingPlatformApp.Controls"
       mc:Ignorable="d">
     <Grid.Background>
         <SolidColorBrush Color="White"/>
@@ -29,12 +30,21 @@
             Margin="1"
             Orientation="Horizontal">
             <Label Content="飞行实验名称:" />
-            <Label Content="{Binding Name}" />
+            <Label Content="{Binding Name}" FontStyle="Italic"/>
         </StackPanel>
         <StackPanel
             Grid.Row="1"
             Margin="1"
             Orientation="Horizontal">
+            <myctrls:Flighter Margin="25,22,13,0">
+                <myctrls:Flighter.RenderTransform>
+                    <ScaleTransform ScaleX="0.6" ScaleY="0.6"/>
+                </myctrls:Flighter.RenderTransform>
+            </myctrls:Flighter>
+            <Label Content="{Binding FlighterName}"/>
+            <Label Content=":"/>
+            <Label Content="坐标:" />
+            <Label Content="{Binding NowLocation, Converter={StaticResource PointToStringConverter}}" />
             <Label Content="滚转角:" />
             <Label Content="{Binding Roll.Value}" />
             <Label Content="俯仰角:" />
@@ -42,12 +52,25 @@
             <Label Content="偏航角:" />
             <Label Content="{Binding Yaw.Value}" />
         </StackPanel>
-        <StackPanel Grid.Row="2" Margin="1"
+        <StackPanel
+            Grid.Row="2"
+            Margin="1"
             Orientation="Horizontal">
-            <Label Content="战斗机坐标:" />
-            <Label Content="{Binding NowLocation, Converter={StaticResource PointToStringConverter}}" />
-            <Label Content="直升机坐标:" />
+            <myctrls:Helicopter Margin="25,20,13,0">
+                <myctrls:Helicopter.RenderTransform>
+                    <ScaleTransform ScaleX="0.6" ScaleY="0.5"/>
+                </myctrls:Helicopter.RenderTransform>
+            </myctrls:Helicopter>
+            <Label Content="{Binding HelicopterName}"/>
+            <Label Content=":"/>
+            <Label Content="坐标:" />
             <Label Content="{Binding SixPlatformNowLocation, Converter={StaticResource PointToStringConverter}}" />
+            <Label Content="滚转角:" />
+            <Label Content="{Binding SixPlatformRoll.Value}" />
+            <Label Content="俯仰角:" />
+            <Label Content="{Binding SixPlatformPitch.Value}" />
+            <Label Content="偏航角:" />
+            <Label Content="{Binding SixPlatformYaw.Value}" />
         </StackPanel>
     </Grid>
 </Grid>
