--- a/Views/FlightMapWindow.xaml
+++ b/Views/FlightMapWindow.xaml
@@ -13,6 +13,8 @@
     BorderThickness="1"
     GlowBrush="Black"
     Keyboard.KeyDown="Window_KeyDown"
+    Keyboard.KeyUp="Window_KeyUp"
+    Mouse.MouseWheel="Window_MouseWheel"
     ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     WindowTransitionsEnabled="False">
@@ -25,63 +27,75 @@
             <mycon:NullToVisiblyConverter x:Key="NullToVisiblyConverter" />
             <mycon:BoolToVisiblyConverter x:Key="BoolToVisiblyConverter" />
             <mycon:TrailPointsToPathFigureConverter x:Key="TrailPointsToPathFigureConverter" />
+            <mycon:MarginLeftTopToPointXY x:Key="MarginLeftTopToPointXY"/>
         </ResourceDictionary>
     </Controls:MetroWindow.Resources>
     <Grid x:Name="fatherGrid">
         <Grid.RenderTransform>
-            <ScaleTransform ScaleX="1" ScaleY="1" />
+            <ScaleTransform/>
         </Grid.RenderTransform>
         <Grid.RowDefinitions>
             <RowDefinition />
-            <RowDefinition Height="40" />
-            <RowDefinition Height="40" />
+            <RowDefinition Height="35" />
+            <RowDefinition Height="35" />
+            <RowDefinition Height="35" />
         </Grid.RowDefinitions>
         <myctrls:GridAxes
             x:Name="gridAxes"
+            MouseRightButtonDown="gridAxes_MouseRightButtonDown"
+            MouseRightButtonUp="gridAxes_MouseRightButtonUp"
+            MouseMove="gridAxes_MouseMove"
             Grid.Row="0"
             Width="{Binding ElementName=Window, Path=Width}"
             Height="{Binding ElementName=Window, Path=Height}"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             Background="Beige">
-            <myctrls:CanvasTrail />
-            <myctrls:CanvasTrail />
-            <myctrls:Helicopter
+            <Grid Margin="{Binding DrawMargin}">
+                <myctrls:CanvasTrail />
+                <myctrls:CanvasTrail />
+                <myctrls:CanvasTrail />
+                <myctrls:Helicopter
                 Width="1"
                 Height="1"
-                Margin="{Binding HelicopterPosition, Converter={StaticResource PositionToMarginConverter}}"
+                Margin="{Binding Helicopter.MyMapPosition, Converter={StaticResource PositionToMarginConverter}}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Panel.ZIndex="0">
-                <myctrls:Helicopter.RenderTransform>
-                    <TransformGroup>
-                        <RotateTransform Angle="{Binding HelicopterAngle}" />
-                    </TransformGroup>
-                </myctrls:Helicopter.RenderTransform>
-            </myctrls:Helicopter>
-            <myctrls:Flighter
+                    <myctrls:Helicopter.RenderTransform>
+                        <TransformGroup>
+                            <RotateTransform Angle="{Binding Helicopter.Angle}" />
+                        </TransformGroup>
+                    </myctrls:Helicopter.RenderTransform>
+                </myctrls:Helicopter>
+                <myctrls:Flighter
                 Width="1"
                 Height="1"
-                Margin="{Binding FlighterPosition, Converter={StaticResource PositionToMarginConverter}}"
+                Margin="{Binding Flighter.MyMapPosition, Converter={StaticResource PositionToMarginConverter}}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Panel.ZIndex="0">
-                <myctrls:Flighter.RenderTransform>
-                    <TransformGroup>
-                        <RotateTransform Angle="{Binding FlighterAngle}" />
-                    </TransformGroup>
-                </myctrls:Flighter.RenderTransform>
-            </myctrls:Flighter>
-            <Canvas>
-                <Path
-                    Data="{Binding FlighterTrail, Converter={StaticResource TrailPointsToPathFigureConverter}}"
-                    Stroke="Gray"
-                    StrokeThickness="2" />
-                <Path Stroke="Gray" StrokeThickness="2">
-                    <Path.Data>
-                        <PathGeometry Figures="{Binding HelicopterTrail, Converter={StaticResource SetPointsToPathFigureConverter}}" />
-                    </Path.Data>
-                </Path>
+                    <myctrls:Flighter.RenderTransform>
+                        <TransformGroup>
+                            <RotateTransform Angle="{Binding Flighter.Angle}" />
+                        </TransformGroup>
+                    </myctrls:Flighter.RenderTransform>
+                </myctrls:Flighter>
+                <myctrls:Missile
+                Width="1"
+                Height="1"
+                Margin="{Binding Missile.MyMapPosition, Converter={StaticResource PositionToMarginConverter}}"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Panel.ZIndex="0">
+                    <myctrls:Missile.RenderTransform>
+                        <TransformGroup>
+                            <RotateTransform Angle="{Binding Missile.Angle}" />
+                        </TransformGroup>
+                    </myctrls:Missile.RenderTransform>
+                </myctrls:Missile>
+            </Grid>
+            <Canvas Margin="{Binding DrawMargin}">
                 <TextBlock
                     Margin="{Binding SetPoints[0], Converter={StaticResource PositionToMarginConverter}}"
                     FontSize="{Binding SetPointsFontSize}"
@@ -117,7 +131,7 @@
                     FontSize="{Binding SetPointsFontSize}"
                     Text="航路点7"
                     Visibility="{Binding HasSetPoints[6], Converter={StaticResource BoolToVisiblyConverter}}" />
-                <Path Stroke="Yellow" StrokeThickness="3">
+                <Path Stroke="Yellow" StrokeThickness="{Binding SetPointsLineWidth}">
                     <Path.Data>
                         <PathGeometry Figures="{Binding SetPoints, Converter={StaticResource SetPointsToPathFigureConverter}}" />
                     </Path.Data>
@@ -208,17 +222,78 @@
                 </Path>
             </Canvas>
         </myctrls:GridAxes>
-        <Label
-            Grid.Row="1"
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <StackPanel
+            Grid.Column="0"
+            Margin="1"
+            Orientation="Horizontal">
+                <myctrls:Flighter Margin="25,16,13,0">
+                    <myctrls:Flighter.RenderTransform>
+                        <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    </myctrls:Flighter.RenderTransform>
+                </myctrls:Flighter>
+                <Label
             VerticalAlignment="Center"
-            Content="{Binding FlightLocationString}"
+            Content="{Binding Flighter.LocationString}"
             FontFamily="Times New Roman"
-            FontSize="22" />
-        <Label
+            FontSize="{Binding LocationStringFontSize}" />
+            </StackPanel>
+            <StackPanel
+            Grid.Column="1"
+            Margin="1"
+            Orientation="Horizontal">
+                <myctrls:Helicopter Margin="25,15,13,0">
+                    <myctrls:Helicopter.RenderTransform>
+                        <ScaleTransform ScaleX="0.5" ScaleY="0.4"/>
+                    </myctrls:Helicopter.RenderTransform>
+                </myctrls:Helicopter>
+                <Label
+            VerticalAlignment="Center"
+            Content="{Binding Helicopter.LocationString}"
+            FontFamily="Times New Roman"
+            FontSize="{Binding LocationStringFontSize}" />
+            </StackPanel>
+        </Grid>
+        <StackPanel
             Grid.Row="2"
+            Margin="1"
+            Orientation="Horizontal">
+            <myctrls:Missile Margin="25,15,13,0">
+                <myctrls:Missile.RenderTransform>
+                    <ScaleTransform ScaleY="0.7" ScaleX="0.9"/>
+                </myctrls:Missile.RenderTransform>
+            </myctrls:Missile>
+            <Label
             VerticalAlignment="Center"
-            Content="{Binding HelicopterLocationString}"
+            Content="{Binding Missile.LocationString}"
             FontFamily="Times New Roman"
-            FontSize="22" />
+            FontSize="{Binding LocationStringFontSize}" />
+        </StackPanel>
+        <StackPanel Grid.Row="3"
+                    Orientation="Horizontal">
+            <Label Content="X:" 
+                   Margin="16,0,0,0"
+                   FontSize="{Binding LocationStringFontSize}"
+                   VerticalAlignment="Center"></Label>
+            <myctrls:NumuricTextBlock VerticalAlignment="Center"
+                                      FontSize="{Binding LocationStringFontSize}"
+                                      MinWidth="100"
+                                      Text="{Binding DrawMargin.Left, Converter={StaticResource MarginLeftTopToPointXY}}">
+            </myctrls:NumuricTextBlock>
+            <Label Content="Y:" 
+                   Margin="10,0,0,0"
+                   FontSize="{Binding LocationStringFontSize}"
+                   VerticalAlignment="Center"></Label>
+            <myctrls:NumuricTextBlock VerticalAlignment="Center"
+                                      FontSize="{Binding LocationStringFontSize}"
+                                      MinWidth="100"
+                                      Text="{Binding DrawMargin.Top, 
+                Converter={StaticResource MarginLeftTopToPointXY}}">
+            </myctrls:NumuricTextBlock>
+        </StackPanel>
     </Grid>
 </Controls:MetroWindow>
