--- a/Controls/GridAxes.xaml
+++ b/Controls/GridAxes.xaml
@@ -5,10 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TeachingPlatformApp.Controls"
              mc:Ignorable="d" 
-             Background="Wheat"
-            Width="700"
-            Height="500"
-             VerticalAlignment="Stretch" HorizontalAlignment="Stretch"            
+             VerticalAlignment="Stretch" 
+            HorizontalAlignment="Stretch"            
             >
     <Canvas x:Name="labelCanvas" Margin="1">
     </Canvas>
