Finish flightexperiment test.
Finish flightexperiment test.

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -405,10 +405,10 @@
                 x:Name="consoleTextBox"
                 Grid.Row="2"
                 MinHeight="60"
-                HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
                 Background="Black"
                 FontFamily="楷体"
+                TextWrapping="Wrap"
                 FontSize="23"
                 Foreground="White"
                 ScrollViewer.CanContentScroll="True"
