--- a/Views/ConfigWindow.xaml
+++ b/Views/ConfigWindow.xaml
@@ -1,16 +1,19 @@
-﻿<Window x:Class="TeachingPlatformApp.Views.ConfigWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TeachingPlatformApp.Views"
-        mc:Ignorable="d"
-        Title="{Binding Title}" Height="350" Width="525"
-        WindowStartupLocation="CenterScreen">
+﻿<Window
+    x:Class="TeachingPlatformApp.Views.ConfigWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TeachingPlatformApp.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="{Binding Title}"
+    Width="525"
+    Height="350"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Window.Resources>
         <ResourceDictionary>
             <Style TargetType="ListBoxItem">
-                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="FontSize" Value="20" />
             </Style>
         </ResourceDictionary>
     </Window.Resources>
@@ -20,13 +23,12 @@
             <ColumnDefinition Width="5" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <ListBox Grid.Column="0">
-            <ListBoxItem Content="{Binding ComConfigName}"/>
-            <ListBoxItem Content="123"/>
-            <ListBoxItem Content="123"/>
-            <ListBoxItem Content="123"/>
-            <ListBoxItem Content="123"/>
-            <ListBoxItem Content="123"/>
+        <ListBox Grid.Column="0" Background="Wheat">
+            <ListBoxItem Content="{Binding ComConfigName}" />
         </ListBox>
+        <GridSplitter Grid.Column="1" Width="5" />
+        <Grid Grid.Column="2" >
+            <TextBlock 
+        </Grid>
     </Grid>
 </Window>
